force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Additional_Discount_Calc__c.field-meta.xml
<CustomField>
    <fullName>Additional_Discount_Calc__c</fullName>
    <formula>if(SBQQ__RegularPrice__c&lt;&gt; 0, 1 - ( SBQQ__CustomerPrice__c / SBQQ__RegularPrice__c ), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Discount Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>