force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ApprovalLevel__c.field-meta.xml
<CustomField>
    <fullName>ApprovalLevel__c</fullName>
    <label>Approval Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>