force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Cost_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Cost_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost Hidden</label>
    <type>Checkbox</type>
</CustomField>