force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discretionary_Discount_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Discount_Decimal__c</fullName>
    <label>Discretionary Discount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>