force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discretionary_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Discount_Percent__c</fullName>
    <label>Discretionary Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>