force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Initialized__c.field-meta.xml
<CustomField>
    <fullName>Initialized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does not drive any rules.  Put here for initlialization price rules.</description>
    <label>Initialized</label>
    <type>Checkbox</type>
</CustomField>