force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Level_1_Floor__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Floor__c</fullName>
    <label>Level 1 Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>