force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Net_Divided_by_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Net_Divided_by_Total__c</fullName>
    <formula>SBQQ__NetTotal__c / SBQQ__Quote__r.SBQQ__CustomerAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Net Divided by Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>