force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <description>(SBQQ__NetPrice__c - SBQQ__UnitCost__c)/SBQQ__NetPrice__c</description>
    <formula>IF( SBQQ__UnitCost__c  = 0, 0,(SBQQ__NetPrice__c - SBQQ__UnitCost__c)/SBQQ__NetPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>