force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Margin_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Margin_Quantity__c</fullName>
    <label>Margin Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>