force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>IF(SBQQ__ProductCode__c=&apos;D-Fee-Usage&apos;,  TEXT(SBQQ__NetPrice__c*100) +&apos;%&apos; , &apos;USD &apos;+TEXT(SBQQ__NetPrice__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Unit Price</label>
    <type>Text</type>
</CustomField>