force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line_ACV__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_ACV__c</fullName>
    <formula>IF(SBQQ__ProrateMultiplier__c &gt; 0, ( SBQQ__NetTotal__c / SBQQ__ProrateMultiplier__c ) * (1/( SBQQ__DefaultSubscriptionTerm__c /12)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>