force-app/main/default/objects/SBQQ__QuoteLine__c/fields/QuoteLineEndDate__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineEndDate__c</fullName>
    <formula>IF(NOT(ISBLANK(SBQQ__EffectiveEndDate__c)),SBQQ__EffectiveEndDate__c,
  
   IF(NOT(ISBLANK(SBQQ__SubscriptionTerm__c)), SBQQ__EffectiveStartDate__c + ( ( 365 / 12 ) *  SBQQ__SubscriptionTerm__c),

     SBQQ__EffectiveStartDate__c + ( ( 365 / 12 )*SBQQ__Quote__r.SBQQ__SubscriptionTerm__c) ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line End Date</label>
    <type>Date</type>
</CustomField>