force-app/main/default/objects/SBQQ__QuoteLine__c/fields/RegularPriceCalc__c.field-meta.xml
<CustomField>
    <fullName>RegularPriceCalc__c</fullName>
    <label>RegularPriceCalc</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>