force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>