force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Subscription_or_Asset__c.field-meta.xml
<CustomField>
    <fullName>Subscription_or_Asset__c</fullName>
    <formula>IF( TEXT(SBQQ__SubscriptionPricing__c) = &quot;&quot; ,&quot;Asset&quot;, &quot;Subscription&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription or Asset</label>
    <type>Text</type>
</CustomField>