force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Threshold_1_Level__c.field-meta.xml
<CustomField>
    <fullName>Threshold_1_Level__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Threshold 1 Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>