force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Threshold_1_Message__c.field-meta.xml
<CustomField>
    <fullName>Threshold_1_Message__c</fullName>
    <defaultValue>&quot;Manager&quot;</defaultValue>
    <label>Threshold 1 Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>