force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Threshold_2_Message__c.field-meta.xml
<CustomField>
    <fullName>Threshold_2_Message__c</fullName>
    <defaultValue>&quot;VP&quot;</defaultValue>
    <label>Threshold 2 Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>