force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Threshold_3_Message__c.field-meta.xml
<CustomField>
    <fullName>Threshold_3_Message__c</fullName>
    <defaultValue>&quot;Finance&quot;</defaultValue>
    <label>Threshold 3 Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>