force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>IF( SBQQ__DefaultSubscriptionTerm__c &gt; 0,   Margin_Quantity__c   * SBQQ__UnitCost__c * SBQQ__ProrateMultiplier__c, Margin_Quantity__c * SBQQ__UnitCost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>