force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Total_NRR__c.field-meta.xml
<CustomField>
    <fullName>Total_NRR__c</fullName>
    <formula>IF( ISPICKVAL( SBQQ__ChargeType__c , &quot;Usage&quot;) ,SBQQ__NetTotal__c,


IF(ISPICKVAL(SBQQ__SubscriptionPricing__c,&quot;Fixed Price&quot;) || ISPICKVAL(SBQQ__SubscriptionPricing__c,&quot;Percent of Total&quot;),0.0,SBQQ__NetTotal__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>